syntax = "proto3";

import "days-of-week.proto";
import "frequencies.proto";


/** Calendar invite recurrence rules. */
message CalendarRecurrenceRules {
	/** RFC 5545 BYMONTH. */
	repeated uint32 byMonth = 1;

	/** RFC 5545 BYMONTHDAY. */
	repeated uint32 byMonthDay = 2;

	/** RFC 5545 BYSETPOS. */
	repeated uint32 bySetPosition = 3;

	/** RFC 5545 BYDAY. */
	repeated DaysOfWeek byWeekDay = 4;

	/** RFC 5545 COUNT. */
	uint32 count = 5;

	/** RFC 5545 EXDATE. */
	repeated double excludeDates = 6;

	/** RFC 5545 EXDATE time zone. */
	string excludeDatesTimeZone = 7;

	/** RFC 5545 FREQ. */
	required Frequencies frequency = 8;

	/** RFC 5545 INTERVAL. */
	uint32 interval = 9;

	/** RFC 5545 UNTIL. */
	double until = 10;

	/** RFC 5545 WKST. */
	DaysOfWeek weekStart = 11;
}
